ajustes nas docs
